# codecrafters-shell-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/algebra/: cmd.rs
src/command/: cd.rs  echo.rs  exit.rs  invalid.rs  mod.rs  pwd.rs  type.rs
